--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,25 @@
 asgiref==3.6.0
 beautifulsoup4==4.11.2
+black==23.3.0
+click==8.1.3
 dj-database-url==1.2.0
 Django==4.1.6
 django-bootstrap-v5==1.0.11
+django-cors-headers==4.0.0
 django-stdimage==6.0.1
 djangorestframework==3.14.0
+mypy-extensions==1.0.0
 mysqlclient==2.1.1
+packaging==23.0
+pathspec==0.11.1
 Pillow==9.4.0
+platformdirs==3.2.0
+psycopg2-binary==2.9.6
 pyngrok==5.2.1
 pytz==2022.7.1
 PyYAML==6.0
 soupsieve==2.3.2.post1
 sqlparse==0.4.3
+tomli==2.0.1
 tzdata==2022.7
 whitenoise==6.3.0
